--- a/1-Sliding_Window.ipynb
+++ b/1-Sliding_Window.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Interview_Prep-1.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyM2Eut83jSJlv4SanwMVLnf"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "7Tjezi1VxdI9"
+      },
       "source": [
         "https://github.com/cl2333/Grokking-the-Coding-Interview-Patterns-for-Coding-Questions\n",
         "\n",
@@ -38,20 +23,18 @@
         "* Problem Challenge 2 - String Anagrams (hard)\n",
         "* Problem Challenge 3 - Smallest Window containing Substring (hard) *\n",
         "* Problem Challenge 4 - Words Concatenation (hard)\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "7Tjezi1VxdI9"
-      }
+        "\n",
+        "often times O(N+N) time complexity, because you loop through array once, then loop thru each subarray, sliding window\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "a. Maximum Sum Subarray of Size K (easy)"
-      ],
       "metadata": {
         "id": "Rf02pg-ryUiy"
-      }
+      },
+      "source": [
+        "a. Maximum Sum Subarray of Size K (easy)"
+      ]
     },
     {
       "cell_type": "code",
@@ -66,8 +49,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Maximum sum of a subarray of size K: 9\n",
             "Maximum sum of a subarray of size K: 7\n",
@@ -76,17 +59,17 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'\\nTime Complexity \\nThe time complexity of the above algorithm will be O(N).\\nSpace Complexity \\nThe algorithm runs in constant space O(1).\\n'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'\\nTime Complexity \\nThe time complexity of the above algorithm will be O(N).\\nSpace Complexity \\nThe algorithm runs in constant space O(1).\\n'"
+            ]
           },
+          "execution_count": 17,
           "metadata": {},
-          "execution_count": 17
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -118,9 +101,8 @@
         "  return max_sum\n",
         "  \n",
         "\n",
-        "#mycode\n",
+        "#solution\n",
         "def max_sub_array_of_size_k(k, arr):\n",
-        "  # TODO: Write your code here\n",
         "  max_sum , window_start, window_sum = 0, 0, 0\n",
         "\n",
         "\n",
@@ -152,15 +134,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "b. smallest subarray with a given sum"
-      ],
       "metadata": {
         "id": "Sv-BXnDiGP1E"
-      }
+      },
+      "source": [
+        "b. smallest subarray with a given sum"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_VxsoedIGNks"
+      },
+      "outputs": [],
       "source": [
         "'''\n",
         "Problem Statement \n",
@@ -185,12 +172,9 @@
         "import math\n",
         "def my_smallest_subarray_with_given_sum(s, arr):\n",
         "  min_length = 0\n",
-        "\n",
-        "return min_length\n",
-        "\n",
+        "  return min_length\n",
         "\n",
         "#answer\n",
-        "\n",
         "def smallest_subarray_with_given_sum(s, arr):\n",
         "  window_sum = 0\n",
         "  min_length = math.inf\n",
@@ -223,12 +207,304 @@
         "Space Complexity \n",
         "The algorithm runs in constant space O(1).\n",
         "'''"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "c. longest substring with k distinct"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "a\n",
+            "r\n",
+            "a\n",
+            "a\n",
+            "c\n",
+            "i\n",
+            "Length of the longest substring: 4\n",
+            "a\n",
+            "r\n",
+            "a\n",
+            "a\n",
+            "c\n",
+            "i\n",
+            "Length of the longest substring: 2\n",
+            "c\n",
+            "b\n",
+            "b\n",
+            "e\n",
+            "b\n",
+            "i\n",
+            "Length of the longest substring: 5\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "'\\nTime Complexity \\nThe time complexity of the above algorithm will be O(N) where ‘N’ is the number of characters in the input string. \\nThe outer for loop runs for all characters and the inner while loop processes each character only once, therefore the time complexity of the algorithm will be O(N+N) which is asymptotically equivalent to O(N).\\nSpace Complexity \\nThe space complexity of the algorithm is O(K), as we will be storing a maximum of ‘K+1’ characters in the HashMap.\\n'"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "metadata": {
-        "id": "_VxsoedIGNks"
-      },
+      "source": [
+        "'''\n",
+        "Problem Statement #\n",
+        "Given a string, find the length of the longest substring in it with no more than K distinct characters.\n",
+        "Example 1:\n",
+        "Input: String=\"araaci\", K=2\n",
+        "Output: 4\n",
+        "Explanation: The longest substring with no more than '2' distinct characters is \"araa\".\n",
+        "Example 2:\n",
+        "Input: String=\"araaci\", K=1\n",
+        "Output: 2\n",
+        "Explanation: The longest substring with no more than '1' distinct characters is \"aa\".\n",
+        "Example 3:\n",
+        "Input: String=\"cbbebi\", K=3\n",
+        "Output: 5\n",
+        "Explanation: The longest substrings with no more than '3' distinct characters are \"cbbeb\" & \"bbebi\".\n",
+        "'''\n",
+        "\n",
+        "#mycode\n",
+        "\n",
+        "\n",
+        "\n",
+        "#answer\n",
+        "def longest_substring_with_k_distinct(str, k):\n",
+        "  window_start = 0\n",
+        "  max_length = 0\n",
+        "  char_frequency = {}\n",
+        "\n",
+        "  # in the following loop we'll try to extend the range [window_start, window_end]\n",
+        "  for window_end in range(len(str)):\n",
+        "    right_char = str[window_end]\n",
+        "    print(right_char)\n",
+        "    #if not in dict, add to dict\n",
+        "    if right_char not in char_frequency:\n",
+        "      char_frequency[right_char] = 0\n",
+        "    #incr char freq in dict\n",
+        "    char_frequency[right_char] += 1\n",
+        "\n",
+        "    # shrink the sliding window, until we are left with 'k' distinct characters in the char_frequency\n",
+        "    while len(char_frequency) > k:\n",
+        "      left_char = str[window_start]\n",
+        "      char_frequency[left_char] -= 1\n",
+        "      if char_frequency[left_char] == 0:\n",
+        "        del char_frequency[left_char]\n",
+        "      window_start += 1  # shrink the window\n",
+        "    # remember the maximum length so far\n",
+        "    max_length = max(max_length, window_end-window_start + 1)\n",
+        "  return max_length\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "  print(\"Length of the longest substring: \" + str(longest_substring_with_k_distinct(\"araaci\", 2)))\n",
+        "  print(\"Length of the longest substring: \" + str(longest_substring_with_k_distinct(\"araaci\", 1)))\n",
+        "  print(\"Length of the longest substring: \" + str(longest_substring_with_k_distinct(\"cbbebi\", 3)))\n",
+        "\n",
+        "\n",
+        "main()\n",
+        "\n",
+        "\n",
+        "'''\n",
+        "Time Complexity \n",
+        "The time complexity of the above algorithm will be O(N) where ‘N’ is the number of characters in the input string. \n",
+        "The outer for loop runs for all characters and the inner while loop processes each character only once, therefore the time complexity of the algorithm will be O(N+N) which is asymptotically equivalent to O(N).\n",
+        "Space Complexity \n",
+        "The space complexity of the algorithm is O(K), as we will be storing a maximum of ‘K+1’ characters in the HashMap.\n",
+        "'''"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "d. Fruits into Baskets\n",
+        "\n",
+        "'''\n",
+        "Problem Statement \n",
+        "Given an array of characters where each character represents a fruit tree, you are given two baskets and your goal is to put maximum number of fruits in each basket. The only restriction is that each basket can have only one type of fruit.\n",
+        "You can start with any tree, but once you have started you can’t skip a tree. You will pick one fruit from each tree until you cannot, i.e., you will stop when you have to pick from a third fruit type.\n",
+        "Write a function to return the maximum number of fruits in both the baskets.\n",
+        "Example 1:\n",
+        "Input: Fruit=['A', 'B', 'C', 'A', 'C']\n",
+        "Output: 3\n",
+        "Explanation: We can put 2 'C' in one basket and one 'A' in the other from the subarray ['C', 'A', 'C']\n",
+        "Example 2:\n",
+        "Input: Fruit=['A', 'B', 'C', 'B', 'B', 'C']\n",
+        "Output: 5\n",
+        "Explanation: We can put 3 'B' in one basket and two 'C' in the other basket. \n",
+        "This can be done if we start with the second letter: ['B', 'C', 'B', 'B', 'C']\n",
+        "'''\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#answer\n",
+        "def fruits_into_baskets(fruits):\n",
+        "  window_start = 0\n",
+        "  max_length = 0\n",
+        "  fruit_frequency = {}\n",
+        "\n",
+        "  # try to extend the range [window_start, window_end]\n",
+        "  for window_end in range(len(fruits)):\n",
+        "    right_fruit = fruits[window_end]\n",
+        "    if right_fruit not in fruit_frequency:\n",
+        "      fruit_frequency[right_fruit] = 0\n",
+        "    fruit_frequency[right_fruit] += 1\n",
+        "\n",
+        "    # shrink the sliding window, until we are left with '2' fruits in the fruit frequency dictionary\n",
+        "    while len(fruit_frequency) > 2:\n",
+        "      left_fruit = fruits[window_start]\n",
+        "      fruit_frequency[left_fruit] -= 1\n",
+        "      if fruit_frequency[left_fruit] == 0:\n",
+        "        del fruit_frequency[left_fruit]\n",
+        "      window_start += 1  # shrink the window\n",
+        "    max_length = max(max_length, window_end-window_start + 1)\n",
+        "  return max_length\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "  print(\"Maximum number of fruits: \" + str(fruits_into_baskets(['A', 'B', 'C', 'A', 'C'])))\n",
+        "  print(\"Maximum number of fruits: \" + str(fruits_into_baskets(['A', 'B', 'C', 'B', 'B', 'C'])))\n",
+        "\n",
+        "\n",
+        "main()\n",
+        "\n",
+        "\n",
+        "\n",
+        "'''\n",
+        "Time Complexity \n",
+        "The time complexity of the above algorithm will be O(N) where ‘N’ is the number of characters in the input array. \n",
+        "The outer for loop runs for all characters and the inner while loop processes each character only once, therefore the time complexity of the algorithm will be O(N+N)which is asymptotically equivalent to O(N).\n",
+        "Space Complexity \n",
+        "The algorithm runs in constant space O(1) as there can be a maximum of three types of fruits stored in the frequency map.\n",
+        "Similar Problems \n",
+        "Problem 1: Longest Substring with at most 2 distinct characters\n",
+        "Given a string, find the length of the longest substring in it with at most two distinct characters.\n",
+        "Solution: This problem is exactly similar to our parent problem.\n",
+        "'''"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "No-repeat Substring (hard) *\n",
+        "\n",
+        "'''\n",
+        "Problem Statement \n",
+        "Given a string, find the length of the longest substring which has no repeating characters.\n",
+        "Example 1:\n",
+        "Input: String=\"aabccbb\"\n",
+        "Output: 3\n",
+        "Explanation: The longest substring without any repeating characters is \"abc\".\n",
+        "Example 2:\n",
+        "Input: String=\"abbbb\"\n",
+        "Output: 2\n",
+        "Explanation: The longest substring without any repeating characters is \"ab\".\n",
+        "Example 3:\n",
+        "Input: String=\"abccde\"\n",
+        "Output: 3\n",
+        "Explanation: Longest substrings without any repeating characters are \"abc\" & \"cde\".\n",
+        "'''"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#answer\n",
+        "def non_repeat_substring(str):\n",
+        "  window_start = 0\n",
+        "  max_length = 0\n",
+        "  char_index_map = {}\n",
+        "\n",
+        "  # try to extend the range [windowStart, windowEnd]\n",
+        "  for window_end in range(len(str)):\n",
+        "    right_char = str[window_end]\n",
+        "    # if the map already contains the 'right_char', shrink the window from the beginning so that\n",
+        "    # we have only one occurrence of 'right_char'\n",
+        "    if right_char in char_index_map:\n",
+        "      # this is tricky; in the current window, we will not have any 'right_char' after its previous index\n",
+        "      # and if 'window_start' is already ahead of the last index of 'right_char', we'll keep 'window_start'\n",
+        "      window_start = max(window_start, char_index_map[right_char] + 1)\n",
+        "    # insert the 'right_char' into the map\n",
+        "    char_index_map[right_char] = window_end\n",
+        "    # remember the maximum length so far\n",
+        "    max_length = max(max_length, window_end - window_start + 1)\n",
+        "  return max_length\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "  print(\"Length of the longest substring: \" + str(non_repeat_substring(\"aabccbb\")))\n",
+        "  print(\"Length of the longest substring: \" + str(non_repeat_substring(\"abbbb\")))\n",
+        "  print(\"Length of the longest substring: \" + str(non_repeat_substring(\"abccde\")))\n",
+        "\n",
+        "\n",
+        "main()\n",
+        "\n",
+        "\n",
+        "'''\n",
+        "Time Complexity \n",
+        "The time complexity of the above algorithm will be O(N) where ‘N’ is the number of characters in the input string.\n",
+        "Space Complexity \n",
+        "The space complexity of the algorithm will be O(K) where KK is the number of distinct characters in the input string. \n",
+        "This also means K<=N, because in the worst case, the whole string might not have any repeating character so the entire string will be added to the HashMap. \n",
+        "Having said that, since we can expect a fixed set of characters in the input string (e.g., 26 for English letters), we can say that the algorithm runs in fixed space O(1); in this case, we can use a fixed-size array instead of the HashMap.\n",
+        "'''"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyM2Eut83jSJlv4SanwMVLnf",
+      "collapsed_sections": [],
+      "name": "Interview_Prep-1.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3.10.4 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.4"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
